# forest-change-framework

./: .gitignore  GUI_README.md  IMPLEMENTATION_PLAN_ML_DATASET_GENERATOR.md  LICENSE  Makefile  README.md  SAMPLE_EXTRACTOR_DEV.md  biomes_example.yaml  gui.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_config_forms.py
config/: aoi_sampler.yaml  dataset_organizer.yaml  framework.yaml  hansen.yaml  imagery_downloader.yaml  sample_extractor.yaml
docs/: architecture.md  component-categories.md  getting-started.md  index.md  testing.md
docs/api/: components.md  core.md
examples/: basic_usage.py  pipeline_example.py
examples/custom_component/: example_component.py
examples/plugin_example/: my_plugin.py
scripts/: test_hansen_real_data.py
src/forest_change_framework/: __init__.py
src/forest_change_framework/cli/: __init__.py  commands.py
src/forest_change_framework/components/: __init__.py
src/forest_change_framework/components/analysis/: README.md  __init__.py
src/forest_change_framework/components/analysis/aoi_sampler/: __init__.py  binning.py  component.py  grid_utils.py  statistics.py  visualization.py
src/forest_change_framework/components/data_ingestion/: README.md  __init__.py
src/forest_change_framework/components/export/: README.md  __init__.py
src/forest_change_framework/components/preprocessing/: README.md  __init__.py
src/forest_change_framework/components/visualization/: README.md  __init__.py
src/forest_change_framework/core/: __init__.py  base.py  config.py  events.py  exceptions.py  registry.py
src/forest_change_framework/gui/: __init__.py  app.py  forms.py  main_window.py  schemas.py  theme.py  utils.py
src/forest_change_framework/gui/config/: __init__.py  gui_config.py
src/forest_change_framework/gui/dialogs/: __init__.py  config_dialog.py  execution_dialog.py
src/forest_change_framework/gui/executors/: __init__.py  component_executor.py
src/forest_change_framework/gui/handlers/: __init__.py
src/forest_change_framework/gui/models/: __init__.py
src/forest_change_framework/gui/panels/: __init__.py  component_panel.py
src/forest_change_framework/gui/widgets/: __init__.py  log_viewer.py
src/forest_change_framework/interfaces/: __init__.py  component.py  middleware.py  plugin.py
src/forest_change_framework/plugins/: __init__.py
src/forest_change_framework/utils/: __init__.py  helpers.py  logger.py  validators.py
tests/: __init__.py  conftest.py
tests/integration/: test_aoi_sampler_integration.py  test_component_lifecycle.py  test_dataset_organizer_integration.py  test_dataset_organizer_real_data.py  test_hansen_real_small.py  test_sample_extractor_integration.py
tests/unit/test_components/: test_aoi_sampler.py  test_dataset_organizer_organizer.py  test_dataset_organizer_splitter.py  test_hansen_forest_change.py  test_sample_component.py  test_sample_extractor.py  test_sample_extractor_component.py
tests/unit/test_core/: __init__.py  test_config.py  test_events.py  test_registry.py
(+23 files in other folders)
